# ssb-fagfunksjoner

./: .bumpversion.cfg  .cookiecutter.json  .cruft.json  .gitignore  .pre-commit-config.yaml  CODEOWNERS  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  noxfile.py  poetry.toml  pyproject.toml  setup.cfg  setup.py  sonar-project.properties
.github/: release-drafter.yml
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: constraints.txt  docs.yml  labeler.yml  release.yml  test_push.yml  tests.yml
demos/: .gitignore  all_combos_demo.ipynb  all_combos_demo.py  datadok_extract.py  demo_klass_xml.py  demo_valuta.ipynb  kvalitetsindikator.py  path_demo.ipynb  project_root.py  saspy_swap_server.ipynb  saspy_swap_server.py  ssbformat.py  statistikkregisteret.ipynb  statistikkregisteret.py  valuta_check.py  versions_dapla.py  view_dataframe_demo.py  view_dataframe_test.ipynb  view_dataframe_test.py
demos/demo_kvalind_logs/: process_data_p2024-01.json  process_data_p2024-02.json  process_data_p2024-03.json  process_data_p2024-04.json  process_data_p2024-05.json  process_data_p2024-06.json  process_data_p2024-07.json  process_data_p2024-08.json  process_data_p2024-09.json  process_data_p2024-10.json  process_data_p2024-11.json  process_data_p2024-12.json
demos/test_data/: test_format_1.json  test_format_2.json
demos/test_formats/: age_group_long_p2025-02.json  age_group_short_p2025-02.json
docs/: conf.py  fagfunksjoner.api.rst  fagfunksjoner.dapla.rst  fagfunksjoner.dapla.standards.rst  fagfunksjoner.data.rst  fagfunksjoner.formats.rst  fagfunksjoner.log.rst  fagfunksjoner.paths.rst  fagfunksjoner.prodsone.rst  index.md  reference.md
fag_felles/api/: klass.py  statbank.py  valuta.py
fag_felles/dapla/: time.py
fag_felles/prodsone/: datfile.py  db1p.py  jdemetra.py  miljo.py  saspy.py  saspy_session.py  xlsx2xml.py
fagfunksjoner/: __init__.py
fagfunksjoner/api/: statistikkregisteret.py
fagfunksjoner/dapla/: standards.py
fagfunksjoner/data/: datadok_extract.py  dicts.py  pandas_combinations.py  pandas_combinations_lono.py  pandas_dtypes.py  tests.py  view_dataframe.py
fagfunksjoner/paths/: __init__.py  daplapath.py  fileversions.py  project_root.py  versions.py
fagfunksjoner/prodsone/: __init__.py  check_env.py  datfile.py  db1p.py  dynarev_to_py.py  miljo.py  oradb.py  printouts.py  saspy_ssb.py  statbank.py
fagfunksjoner/project/: project_root.py
src/fagfunksjoner/: __init__.py  fagfunksjoner_logger.py
src/fagfunksjoner/api/: __init__.py  statistikkregisteret.py  valuta.py
src/fagfunksjoner/dapla/: __init__.py  gsm.py
src/fagfunksjoner/dapla/standards/: __init__.py  time.py  time_functions.py
src/fagfunksjoner/data/: __init__.py  datadok_extract.py  dicts.py  klass_xml.py  pandas_combinations.py  pandas_dtypes.py  pyarrow.py  round.py  round_ssb.py  view_dataframe.py
src/fagfunksjoner/formats/: __init__.py  formats.py
src/fagfunksjoner/kostra/: __init__.py  kommunekorr.py  kostra_kommunekorr.py
src/fagfunksjoner/kvalitetsindikator/: __init__.py  qual_ind.py  qualind.py
src/fagfunksjoner/log/: __init__.py  process_data.py  quality_control_description.py  quality_control_result.py  statlogger.py
src/fagfunksjoner/paths/: __init__.py  git.py  project_root.py  user.py  versions.py  write_versioned.py
src/fagfunksjoner/prodsone/: __init__.py  check_env.py  datfile.py  dynarev.py  dynarev_to_py.py  jdemetra.py  oradb.py  printouts.py  saspy_ssb.py  xlsx2xml.py
src/fagfunksjoner/quality_indicator/: __init__.py  qualind_logger.py
src/functions/: __init__.py  fizzbuzz.py
src/notebooks/: 00_imports.ipynb  README.md
tests/: __init__.py  test_fizzbuzz.py
tests/api/: __init__.py  exchange_rates.csv  test_statistikkregisteret.py  test_valuta.py
tests/dapla/: __init__.py  test_gsm.py  test_time.py  test_time_functions.py
tests/data/: __init__.py  test_all_combos.py  test_datadoc_extract.py  test_datadok_extract.py  test_dicts.py  test_klass_xml.py  test_pandas_dtypes.py  test_pyarrow.py  test_round.py
tests/formats/: test_SsbFormat.py  test_get_format.py  test_store_format.py  write_test_formats.py
tests/formats/test_formats/: test_format.json
tests/kostra/: conftest.py  test_kostra_kommunekorr.py
tests/kvalitetsindikator/: test_qual_ind.py
tests/log/: __init__.py  test_process_quality.py  test_statlogger.py
tests/paths/: __init__.py  conftest.py  test_get_latest_fileversions.py  test_get_latest_gcs_files.py  test_get_next_version_number.py  test_git.py  test_projectpath.py  test_user.py  test_versions.py  test_write_versioned.py
tests/prodsone/: __init__.py  test_check_env.py  test_dynarev.py  test_oradb.py
tests/quality_indicator/: test_qualind_logger.py
