[tool.poetry]
name = "ssb-fagfunksjoner"
version = "0.1.7"
description = "Fellesfunksjoner for ssb i Python"
authors = ["SSB-pythonistas <ssb-pythonistas@ssb.no>"]
license = "MIT"
readme = "README.md"
packages = [{include = "fagfunksjoner"}]

[tool.poetry.dependencies]
python = ">=3.10,<3.13"
dapla-toolbelt = ">=1.3.2"
ipykernel = ">=6.15.3"
pandas = ">=1.5.3"
requests = ">=2.31.0"
toml = ">=0.10.2"
beautifulsoup4 = ">=4.12.2"
python-dotenv = ">=1.0.0"
SQLAlchemy = ">=1.3.19"
cx_Oracle = ">=8.3.0"
saspy = ">=5.2.1"
ipywidgets = ">=8.1.1"
pyarrow = ">=14.0.1"


[tool.poetry.group.dev.dependencies]
pytest = ">=7.1.3"
pre-commit = ">=2.20.0"
autoflake = ">=1.7.6"
pep8-naming = ">=0.13.2"
pyupgrade = ">=3.1.0"
isort = ">=5.10.1"
flake8-logging-format = ">=0.8.1"
flake8-eradicate = ">=1.4.0"
flake8-debugger = ">=4.1.2"
flake8-comprehensions = ">=3.10.0"
flake8-builtins = ">=2.0.0"
flake8-bugbear = ">=22.9.23"
flake8 = ">=5.0.4"
pytest-cov = ">=4.0.0"
mypy = ">=0.982"
pyproject-flake8 = ">=5.0.4.post1"


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
