[project]
name = "ssb-fagfunksjoner"
version = "1.1.2"
description = "Fellesfunksjoner for ssb i Python"
authors = [{ name = "SSB-pythonistas", email = "ssb-pythonistas@ssb.no" }]
license = "MIT"
readme = "README.md"
requires-python = ">=3.10,<4.0"
dynamic = ["classifiers"]
dependencies = [
    "colorama>=0.4.6",
    "colorlog>=6.9.0",
    "dapla-auth-client>=1.0.0",
    "dapla-toolbelt>=4.0.0",
    "ipython>=8.37.0",
    "numpy>=2.2",
    "oracledb>=2.3.0",
    "pandas>=2.0.0",
    "pyarrow>=14.0.1",
    "python-dateutil>=2.9.0",
    "requests>=2.31.0",
    "saspy>=5.2.1",
    "toml>=0.10.2",
    "ipywidgets >=8.1.1",
]

[project.urls]
homepage = "https://github.com/statisticsnorway/ssb-fagfunksjoner"
repository = "https://github.com/statisticsnorway/ssb-fagfunksjoner"
documentation = "https://statisticsnorway.github.io/ssb-fagfunksjoner"
Changelog = "https://github.com/statisticsnorway/ssb-fagfunksjoner/releases"


[tool.poetry]
classifiers = ["Development Status :: 4 - Beta"]
requires-poetry = ">=2.0"
packages = [{ include = "fagfunksjoner", from = "src" }]

[tool.poetry.group.dev.dependencies]
pygments = ">=2.10.0"
black = { extras = ["jupyter"], version = ">=23.1.0" }
coverage = { extras = ["toml"], version = ">=6.2" }
darglint = ">=1.8.1"
furo = ">=2021.11.12"
ipykernel = ">=6.15.3"
isort = ">=5.10.1"
mypy = ">=0.930"
pre-commit = ">=2.16.0"
pre-commit-hooks = ">=4.1.0"
ruff = ">=0.0.284"
pytest = ">=6.2.5"
sphinx = ">=6.2.1"
sphinx-autobuild = ">=2021.3.14"
sphinx-autodoc-typehints = ">=1.24.0"
sphinx-click = ">=3.0.2"
typeguard = ">=2.13.3"
xdoctest = { extras = ["colors"], version = ">=0.15.10" }
myst-parser = { version = ">=0.16.1" }
responses = ">=0.25.3"
deptry = ">=0.23.0"
# Stubs for Mypy
pandas-stubs = ">=2.0.0.230412"
types-requests = ">=2.31.0.10"
types-toml = ">=0.10.8.7"
types-colorama = ">=0.4.15.20240205"
pyarrow-stubs = ">=10.0.1.9"
types-python-dateutil = ">=2.9.0.20250516"

[tool.poetry.requires-plugins]
poetry-plugin-export = ">=1.9"

[tool.pytest.ini_options]
pythonpath = ["src"]

[tool.coverage.paths]
source = ["src", "*/site-packages"]
tests = ["tests", "*/tests"]

[tool.coverage.run]
branch = true
source = ["src"]
relative_files = true

[tool.coverage.report]
show_missing = true
fail_under = 50

[tool.deptry.per_rule_ignores]
DEP001 = ["nox", "nox_poetry"]  # packages available by default

[tool.mypy]
strict = true
warn_unreachable = true
pretty = true
show_column_numbers = true
show_error_context = true
exclude = ["tests", "docs", "noxfile.py"]
warn_unused_ignores = false  # Remove when not supporting python 3.10

[[tool.mypy.overrides]]
module = [
    "ipywidgets.*",
    "saspy.*",
]
ignore_missing_imports = true

[tool.isort]
profile = "black"
skip_gitignore = true
lines_after_imports = 2
# The line below is needed for jupyter notebooks stored as .py in percent format.
# See https://github.com/PyCQA/isort/issues/1338 for details
treat_comments_as_code = ["# %%"]

[tool.ruff]
force-exclude = true  # Apply excludes to pre-commit
show-fixes = true
src = ["src", "tests"]
target-version = "py311"  # Minimum Python version supported
include = ["*.py", "*.pyi", "**/pyproject.toml", "*.ipynb"]
extend-exclude = [
    "__pycache__",
    "old",
    ".ipynb_checkpoints",
    "noxfile.py",
    "docs/conf.py",
]

# Ruff rules may be customized as desired: https://docs.astral.sh/ruff/rules/
[tool.ruff.lint]
select = [
    "A",    # prevent using keywords that clobber python builtins
    "ANN",  # check type annotations
    "B",    # bugbear: security warnings
    "D",    # documentation
    "E",    # pycodestyle
    "F",    # pyflakes
    "ISC",  # implicit string concatenation
    "UP",   # alert you when better syntax is available in your python version
    "RUF",  # the ruff developer's own rules
]
ignore = [
    "ANN202", # Don't require return type annotation for private functions.
    "ANN401", # Allow type annotation with type Any.
    "D100",   # Supress undocumented-public-module. Only doc of public api required.
    "FBT001", # Allow boolean positional arguments in a function.
    "FBT002", # Allow boolean default positional arguments in a function.
    "D415",   # Don't require the first line to end with a period.
    "E402",   # Supress module-import-not-at-top-of-file, needed in jupyter notebooks.
    "E501",   # Supress line-too-long warnings: trust black's judgement on this one.
    "PLR2004", # Allow to compare with unnamed numerical constants.
]

[tool.ruff.lint.isort]
force-single-line = true

[tool.ruff.lint.mccabe]
max-complexity = 15

[tool.ruff.lint.pydocstyle]
convention = "google"  # You can also use "numpy".

[tool.ruff.lint.pylint]
max-args = 8

[tool.ruff.lint.pep8-naming]
classmethod-decorators = ["classmethod", "validator", "root_validator", "pydantic.validator"]

[tool.ruff.lint.per-file-ignores]
"*/__init__.py" = ["F401"]
"**/tests/*" = [
    "ANN001",  # type annotations don't add value for test functions
    "ANN002",  # type annotations don't add value for test functions
    "ANN003",  # type annotations don't add value for test functions
    "ANN201",  # type annotations don't add value for test functions
    "ANN204",  # type annotations don't add value for test functions
    "ANN205",  # type annotations don't add value for test functions
    "ANN206",  # type annotations don't add value for test functions
    "D100",    # docstrings are overkill for test functions
    "D101",
    "D102",
    "D103",
    "S101",    # asserts are encouraged in pytest
]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
